Fixed the alignment problem for the experience section.

--- a/style.css
+++ b/style.css
@@ -507,11 +507,11 @@ section {
 .timeline-label {
     position: relative;
     background: #fff;
-    padding: 1.5em;
+    padding: 0.5em;
     margin-left: 50px;
     background-clip: padding-box;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.05);
-    margin-top: 0;
+    margin-top: -40px;
 }
 
 .timeline-label:after {
